# python_tutorial

./: .gitignore  count.py  day.py  exercise2.py  functional.py  hello.py  hello_app.py  palindrome.py  palindrome_file.py  palindrome_url.py  palindromes_url.txt  requirements.txt  wikp.py
palindrome_app/: setup.py
palindrome_app/palindrome_detector/: __init__.py
palindrome_app/palindrome_detector.egg-info/: SOURCES.txt  top_level.txt
palindrome_app/palindrome_detector/templates/: about.html  index.html  layout.html  palindrome.html  result.html
palindrome_app/tests/: test_site_pages.py
python_data_science/: DataScience_LearnEnoughPython.ipynb  laureates.csv
python_data_science/.ipynb_checkpoints/: DataScience_LearnEnoughPython-checkpoint.ipynb  titanic-checkpoint.csv
python_package_tutorial/: README.md  palindrome_fabari.pypirc  pyproject.toml
python_package_tutorial/src/palindrome_fabari/: phrase.py
python_package_tutorial/tests/: test_phrase.py
